@@ -15,7 +15,6 @@
 
 (load "compiler-test-util.lisp")
 (defpackage "CLOS-IMPURE"
-  (:import-from "SB-KERNEL" "IMPLICIT-GENERIC-FUNCTION-WARNING")
   (:use "CL" "SB-EXT" "ASSERTOID" "TEST-UTIL" "COMPILER-TEST-UTIL"))
 (in-package "CLOS-IMPURE")
 
@@ -23,10 +22,9 @@
 ;;; structure types defined earlier in the file.
 (defstruct struct-a x y)
 (defstruct struct-b x y z)
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (defmethod wiggle ((a struct-a))
   (+ (struct-a-x a)
-     (struct-a-y a))))
+     (struct-a-y a)))
 (defgeneric jiggle (arg))
 (defmethod jiggle ((a struct-a))
   (- (struct-a-x a)
@@ -653,8 +651,7 @@
                           (declare (notinline concatenate)))))
 ;;; CALL-NEXT-METHOD should call NO-NEXT-METHOD if there is no next
 ;;; method.
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
-(defmethod no-next-method-test ((x integer)) (call-next-method)))
+(defmethod no-next-method-test ((x integer)) (call-next-method))
 (assert (null (ignore-errors (no-next-method-test 1))))
 (defmethod no-next-method ((g (eql #'no-next-method-test)) m &rest args)
   (declare (ignore args))
@@ -840,16 +837,14 @@
 
 ;;; DEFMETHOD should signal an ERROR if an incompatible lambda list is
 ;;; given:
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
-(defmethod incompatible-ll-test-1 (x) x))
+(defmethod incompatible-ll-test-1 (x) x)
 (assert-error (defmethod incompatible-ll-test-1 (x y) y))
 (assert-error (defmethod incompatible-ll-test-1 (x &rest y) y))
 ;;; Sneakily using a bit of MOPness to check some consistency
 (assert (= (length
             (sb-pcl:generic-function-methods #'incompatible-ll-test-1)) 1))
 
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
-(defmethod incompatible-ll-test-2 (x &key bar) bar))
+(defmethod incompatible-ll-test-2 (x &key bar) bar)
 (assert-error (defmethod incompatible-ll-test-2 (x) x))
 (defmethod incompatible-ll-test-2 (x &rest y) y)
 (assert (= (length
@@ -864,8 +859,7 @@
 
 (assert (eq (incompatible-ll-test-2 1 :bar 'yes) 'yes))
 
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
-(defmethod incompatible-ll-test-3 ((x integer)) x))
+(defmethod incompatible-ll-test-3 ((x integer)) x)
 (remove-method #'incompatible-ll-test-3
                (find-method #'incompatible-ll-test-3
                             nil
@@ -894,9 +888,8 @@
 
 ;;; bug #136: CALL-NEXT-METHOD was being a little too lexical,
 ;;; resulting in failure in the following:
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (defmethod call-next-method-lexical-args ((x integer))
-  x))
+  x)
 (defmethod call-next-method-lexical-args :around ((x integer))
   (let ((x (1+ x)))
     (declare (ignorable x))
@@ -1060,8 +1053,7 @@
 
 ;;; we should be able to specialize on anything that names a class.
 (defclass name-for-class () ())
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
-(defmethod something-that-specializes ((x name-for-class)) 1))
+(defmethod something-that-specializes ((x name-for-class)) 1)
 (setf (find-class 'other-name-for-class) (find-class 'name-for-class))
 (defmethod something-that-specializes ((x other-name-for-class)) 2)
 (assert (= (something-that-specializes (make-instance 'name-for-class)) 2))
@@ -1169,8 +1161,7 @@
 (defclass picture-class () ((glyph :initarg :glyph)))
 (defclass character-picture-class (character-class picture-class) ())
 
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
-(defmethod width ((c character-class) &key font) font))
+(defmethod width ((c character-class) &key font) font)
 (defmethod width ((p picture-class) &key pixel-size) pixel-size)
 
 (assert-error
@@ -1326,33 +1317,28 @@
   (assert (equal (aref v 1) '(t 1 2))))
 
 ;;; BUG 276: declarations and mutation.
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (defmethod fee ((x fixnum))
   (setq x (/ x 2))
-  x))
+  x)
 (assert (= (fee 1) 1/2))
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (defmethod fum ((x fixnum))
   (setf x (/ x 2))
-  x))
+  x)
 (assert (= (fum 3) 3/2))
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (defmethod fii ((x fixnum))
   (declare (special x))
   (setf x (/ x 2))
-  x))
+  x)
 (assert (= (fii 1) 1/2))
 (defvar *faa*)
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (defmethod faa ((*faa* string-stream))
   (setq *faa* (make-broadcast-stream *faa*))
   (write-line "Break, you sucker!" *faa*)
-  'ok))
+  'ok)
 (assert (eq 'ok (faa (make-string-output-stream))))
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (defmethod fex ((x fixnum) (y fixnum))
   (multiple-value-setq (x y) (values (/ x y) (/ y x)))
-  (list x y)))
+  (list x y))
 (assert (equal (fex 5 3) '(5/3 3/5)))
 
 ;;; Bug reported by Zach Beane; incorrect return of (function
@@ -1662,14 +1648,12 @@
 ;;; Using class instances as specializers, reported by Pascal Costanza, ref CLHS 7.6.2
 (defclass class-as-specializer-test ()
    ())
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (eval `(defmethod class-as-specializer-test1 ((x ,(find-class 'class-as-specializer-test)))
-          'foo)))
+         'foo))
 (assert (eq 'foo (class-as-specializer-test1 (make-instance 'class-as-specializer-test))))
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (funcall (compile nil `(lambda ()
                          (defmethod class-as-specializer-test2 ((x ,(find-class 'class-as-specializer-test)))
-                           'bar)))))
+                           'bar))))
 (assert (eq 'bar (class-as-specializer-test2 (make-instance 'class-as-specializer-test))))
 
 ;;; CHANGE-CLASS and tricky allocation.
@@ -1767,12 +1751,11 @@
 (defclass listoid ()
   ((caroid :initarg :caroid)
    (cdroid :initarg :cdroid :initform nil)))
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (defmethod lengthoid ((x listoid))
   (let ((result 0))
     (loop until (null x)
           do (incf result) (setq x (slot-value x 'cdroid)))
-    result)))
+    result))
 (with-test (:name ((:setq :method-parameter) slot-value))
   (assert (= (lengthoid (make-instance 'listoid)) 1))
   (assert (= (lengthoid
@@ -1794,12 +1777,11 @@
   `(progn
      (fmakunbound 'll-method)
      (fmakunbound 'll-function)
-     (handler-bind ((implicit-generic-function-warning #'muffle-warning))
      (defmethod ll-method ,lambda-list
        ,@declarations
        ,@(when cnm
            `((when nil (call-next-method))))
-       (list ,@values)))
+       (list ,@values))
      (defun ll-function ,lambda-list
        ,@declarations
        (list ,@values))
@@ -1897,9 +1879,8 @@
 
 (test (&key a b &allow-other-keys) (a b) (:a 1 :b 2 :c 3))
 
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (defmethod clim-style-lambda-list-test (a b &optional c d &key x y)
-  (list a b c d x y)))
+  (list a b c d x y))
 
 (clim-style-lambda-list-test 1 2)
 
@@ -2020,11 +2001,10 @@
 (defclass fah ()
   ((x :initform :fah)))
 (declaim (special *fih*))
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (defmethod fihfah ((*fih* fih))
   (set '*fih* (make-instance 'fah))
   (list (slot-value *fih* 'x)
-        (eval '(slot-value *fih* 'x)))))
+        (eval '(slot-value *fih* 'x))))
 (defmethod fihfah ((fah fah))
   (declare (special fah))
   (set 'fah (make-instance 'fih))
@@ -2034,11 +2014,10 @@
   (assert (equal '(:fah :fah) (fihfah (make-instance 'fih))))
   (assert (equal '(:fih :fih) (fihfah (make-instance 'fah)))))
 
-(handler-bind ((implicit-generic-function-warning #'muffle-warning))
 (defmethod no-implicit-declarations-for-local-specials ((faax double-float))
   (declare (special faax))
   (set 'faax (when (< faax 0) (- faax)))
-  faax))
+  faax)
 (with-test (:name :no-implicit-declarations-for-local-specials)
   (assert (not (no-implicit-declarations-for-local-specials 1.0d0))))
 
@@ -2141,12 +2120,11 @@
 (with-test (:name :bug-485019)
   ;; there was a bug in WALK-SETQ, used in method body walking, in the
   ;; presence of declarations on symbol macros.
-  (handler-bind ((implicit-generic-function-warning #'muffle-warning))
   (defmethod bug-485019 ((bug-485019 bug-485019))
     (with-slots (array) bug-485019
       (declare (type (or null simple-array) array))
       (setf array (make-array 4)))
-    bug-485019))
+    bug-485019)
   (funcall 'bug-485019 (make-instance 'bug-485019)))
 
 ;;; The compiler didn't propagate the declarared type before applying
@@ -2241,9 +2219,8 @@
 (with-test (:name (defmethod :specializer-builtin-class-alias :bug-618387))
   (let ((alias (gensym)))
     (setf (find-class alias) (find-class 'symbol))
-    (handler-bind ((implicit-generic-function-warning #'muffle-warning))
     (eval `(defmethod lp-618387 ((s ,alias))
-             (symbol-name s))))
+             (symbol-name s)))
     (assert (equal "FOO" (funcall 'lp-618387 :foo)))))
 
 (with-test (:name (defmethod :pcl-spurious-ignore-warnings))
@@ -2306,9 +2283,8 @@
           ((,pax :type (or null ,pax))))
         (defclass ,sup ()
           ())
-        (handler-bind ((implicit-generic-function-warning #'muffle-warning))
-          (defmethod ,frob ((pnr ,pnr))
-            (slot-value pnr ',pax)))
+        (defmethod ,frob ((pnr ,pnr))
+          (slot-value pnr ',pax))
         (declaim (optimize (safety 1) (debug 1)))))))
 
 (defclass bug-1099708 () ((slot-1099708 :initarg :slot-1099708)))
@@ -2439,8 +2415,7 @@
 
 (eval-when (:compile-toplevel :load-toplevel :execute)
   (require 'sb-cltl2)
-  (handler-bind ((implicit-generic-function-warning #'muffle-warning))
-  (defmethod b ())))
+  (defmethod b ()))
 
 (defmacro macro ()
   (let ((a 20))
@@ -2465,15 +2440,9 @@
 
 (with-test (:name (defmethod :undefined-function :bug-503095))
   (flet ((test-load (file)
-           (let (implicit-gf-warning)
-             (handler-bind
-                 ((sb-ext:implicit-generic-function-warning
-                    (lambda (x)
-                      (setf implicit-gf-warning x)
-                      (muffle-warning x)))
-                  ((or warning error) #'error))
-               (load file))
-             (assert implicit-gf-warning))))
+           (handler-bind
+               (((or warning error) #'error))
+             (load file))))
     (multiple-value-bind (fasl warnings errorsp)
           (compile-file "bug-503095.lisp" :print nil :verbose nil)
       (unwind-protect
